--- a/jQueryAjaxInAsp.NETMVC/Views/Shared/_Layout.cshtml
+++ b/jQueryAjaxInAsp.NETMVC/Views/Shared/_Layout.cshtml
@@ -31,5 +31,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script src="~/Scripts/SiteScript.js"></script>
 </body>
 </html>
