Record select from list to edit mode and then record can be updated

--- a/jQueryAjaxInAsp.NETMVC/Views/Employee/ViewAll.cshtml
+++ b/jQueryAjaxInAsp.NETMVC/Views/Employee/ViewAll.cshtml
@@ -37,9 +37,8 @@
             @Html.DisplayFor(modelItem => item.Salary)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.EmployeeID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.EmployeeID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.EmployeeID })
+            <a class="btn btn-primary btn-sm" onclick="Edit('@Url.Action("AddOrEdit", "Employee", new { id=@item.EmployeeID})')"><i class="fa fa-pencil fa-lg"></i></a>
+            <a class="btn btn-danger btn-sm" onclick="Delete('@Url.Action("Delete", "Employee", new { id=@item.EmployeeID})')"><i class="fa fa-trash fa-lg"></i></a>
         </td>
     </tr>
 }
