--- a/jQueryAjaxInAsp.NETMVC/Views/Shared/_Layout.cshtml
+++ b/jQueryAjaxInAsp.NETMVC/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - jQuery Ajax Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -32,5 +33,6 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     <script src="~/Scripts/SiteScript.js"></script>
+    <script src="~/Scripts/notify.min.js"></script>
 </body>
 </html>
