edit and delete record completely

--- a/jQueryAjaxInAsp.NETMVC/Views/Shared/_Layout.cshtml
+++ b/jQueryAjaxInAsp.NETMVC/Views/Shared/_Layout.cshtml
@@ -29,6 +29,10 @@
         </footer>
     </div>
 
+    <div class="loaderbody" id="loaderbody">
+        <div class="loader"></div>
+    </div>
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
