--- a/jQueryAjaxInAsp.NETMVC/Views/Employee/Index.cshtml
+++ b/jQueryAjaxInAsp.NETMVC/Views/Employee/Index.cshtml
@@ -11,7 +11,22 @@
     <div id="firstTab" class="tab-pane fade in">@Html.Action("ViewAll")</div>
     <div id="secondTab" class="tab-pane fade in active">@Html.Action("AddOrEdit")</div>
 </div>
+
+<link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet" />
 @section scripts{
     @Scripts.Render("~/bundles/jqueryval")
-}
 
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+
+
+    <script>
+        function activatejQueryTable() {
+            $("#employeeTable").DataTable();
+        }
+
+        $(function () {
+            activatejQueryTable();
+        });
+
+    </script>
+}
